--- a/style.css
+++ b/style.css
@@ -120,6 +120,16 @@ nav ul li a.active,a:hover{
       margin-right: -10px;
   }
 }
+
+@media(max-width:316px){
+  .logo{
+      font-size: 20px;
+      margin: 0 50px;
+      margin-left: 5px;
+      margin-right: -10px;
+  }
+}
+
 @media(max-width:850px){
   #checkbtn{
       display: block;
