--- a/compititiveExamQuizFormatStdMtl.css
+++ b/compititiveExamQuizFormatStdMtl.css
@@ -236,3 +236,43 @@ input[type="radio"] {
     }
 
 }
+
+
+/* Use '#' for ID instead of '.' for class */
+#doubtBtn {
+     background: linear-gradient(90deg, var(--accent), var(--accent-2));
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+    padding: 5px;
+    width: 80%;
+    margin-top: 10px;
+    margin-left: 10%;
+    border: 2px solid;
+    border-radius: 5px;
+}
+
+@media (max-width:400px) {
+    #doubtBtn {
+        font-size: 15px;
+        margin-left: 10%;
+    }
+}
+
+#complainBtn {
+    background: linear-gradient(90deg, var(--accent), var(--accent-2));
+    margin-left: 10%;
+    padding: 5px;
+    font-weight: 700;
+    font-size: 20px;
+    color: white;
+    width: 80%;
+    border: 2px solid;
+    border-radius: 5px;
+}
+
+@media (max-width:400px) {
+    #complainBtn {
+        font-size: 15px;
+    }
+}
