--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ html {
         font-size: 1.8em;
     }
     .landing_page_button, .button-wrapper {
-        font-size: 1em;
+        font-size: 25px;
         padding: 15px 10px;
         
         background-color: rgb(15, 77, 131);
@@ -232,3 +232,4 @@ html {
         width: 95%;
     }
 }
+
